<resources>
    <string name="app_name">Trop Facile</string>
    <string name="ok">OK</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="french">French:</string>
    <string name="viewall">ViewAll</string>
    <string name="recommened_exercise">Recommened Exercise</string>
    <string name="your_schedule_courses">Your Schedule courses</string>
    <string name="todo">todo</string>
    <!--Login Screen-->
    <!--Welcome back!-->
    <string name="welcome_back">Ravis de vous revoir !</string>
    <!--Login to continue.-->
    <!--Veuillez-vous connecter pour continuer.-->
    <string name="login_to_continue">Sign in.</string>
    <!--Email or Username-->
    <string name="email_username">Username</string>
    <string name="email_address">Email address</string>
    <!--Password-->
    <string name="password">Mot de passe</string>
    <!--Show-->
    <string name="show">Show</string>
    <!--Hide-->
    <string name="hide">Cacher</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!--Forgot Password?-->
    <string name="forgot_password">Mot de passe oublié?</string>
    <!--Sign In-->
    <string name="sign_in">Sign In</string>
    <!--Create account-->
    <string name="create_account">Créer un compte</string>
    <!--Sunday-->
    <string name="sunday">Dimanche</string>
    <!--Monday-->
    <string name="monday">Lundi</string>
    <!--Tuesday-->
    <string name="tuesday">Mardi</string>
    <!--Wednesday-->
    <string name="wednesday">Mercredi</string>
    <!--Thursday-->
    <string name="thursday">Jeudi</string>
    <!--Friday-->
    <string name="friday">Vendredi</string>
    <!--Saturday-->
    <string name="saturday">Samedi</string>
    <!--Sign Up-->
    <string name="sign_up">S\'inscrire</string>
    <string name="txt_reset_passwords">Your new password must be different from your previous used passwords.</string>
    <string name="register_here">Don\'t have an account?<font color='#146FF8'> Register here</font></string>
    <string name="reset_here"><font color='#146FF8'>Resend code</font> or<font color='#146FF8'>Resend code or</font></string>

    <string name="txt_your_password">Enter your email address and well send to the email associated with your account a link to reset your password.</string>
    <string name="stay_login">Stay login</string>
    <string name="forgot_passwordhint">Forgot Password?</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="success">Sucess</string>
    <string name="confirmer">confirm</string>
    <string name="la_meilleure_cole_en_ligne">La meilleure école en ligne</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="button">Next</string>
    <string name="textview">Skip</string>
    <string name="session_expired_logout">Session ecpire</string>

    <string name="tomorrow">tomorrow</string>
    <string name="msg_password">Username or Password is incorrect.</string>
    <string name="course">Courses</string>
    <string name="exercise">Exercise</string>

    <string name="today">Today</string>
    <string name="new_keyword">New</string>
    <string name="notifiation">Notification</string>
    <string name="write_a_message">Write a message</string>
    <string name="message">Message</string>
    <string name="my_exercises">My Exercises</string>
    <string name="my_courses">My Courses</string>
    <string name="countinue">Countinue</string>
    <string name="registering_your_account">By registering your account. You agree to our <font color='#146FF8'>terms and conditions.</font></string>

    <string name="already_have_an_account">Already have an account? <font color='#146FF8'>Sign In here</font></string>
    <string name="congratulations_n_you_have_successfully_completed_this_course">Congratulations!\n You have successfully completed this course!</string>
    <string name="excellent">Excellent</string>
    <string name="write_your_review_optional">Write your Review(Optional)</string>
    <string name="submit_and_go_back_to_home_page">Submit and go back</string>
    <string name="my_badges">My Badges</string>
    <string name="completed_course">Completed course</string>
    <string name="earn_budges">Earn Budges</string>
    <string name="all_categories">All Categories</string>
    <string name="subscribe_to_our_plan_now">Subscribe to our plan now!</string>
    <string name="plan_message">To view courses and trainings. You need to subscribe to our monthly or yearly plan.</string>
    <string name="subscriptions_message">Opps! All trainings and courses are availble only for users who have subscriptions.</string>
    <string name="change">Change</string>
    <string name="recent_completed_courses">Recent Completed Courses</string>
    <string name="profile_statistics">Profile Statistics</string>
    <string name="my_badge">My Badge</string>
    <string name="write_a_question">Write a question</string>
    <string name="can_t_find">Can\'t find what your looking for?</string>
    <string name="textvalue">\'u Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu purus laoreet, bibendum odio a, efficitur mauris. Sed ultrices blandit turpis, sed auctor libero efficitur eu. Duis fringilla tempor augue id dapibus. Donec fermentum elementum consequat. Sed euismod sapien diam, digniss \nDonec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.\n Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu purus laoreet, bibendum odio a, efficitur mauris. Sed ultrices blandit turpis, sed auctor libero efficitur eu. Duis fringilla tempor augue id dapibus.\n Donec fermentum elementum consequat. Sed euismod sapien diam, digniss Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</string>
    <string name="all_filed_required">please_enter_fullname</string>
    <string name="valid_password">Enter a valid password</string>
    <!--ERROR MESSAGES HANDLING-->
    <string name="err_msg_password_field">Le mot de passe doit contenir au moins 5–20 caractères contenant uniquement des lettres et des chiffres.</string>
    <string name="please_enter_password">Username or Password is incorrect.</string>
    <string name="verify">Verify</string>
    <string name="nav_account_settings">Account Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_account_settings">Account Settings</string>
    <string name="lbl_change_email">Change email</string>
    <string name="lbl_change_password">Change password</string>
    <string name="lbl_synchronization">Synchronization</string>
    <string name="lbl_sync_now">Sync Now</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_current_email">Current Email</string>
    <string name="lbl_type_ur_current_email">Type your current email</string>
    <string name="str_please_enter_valid_email">Enter valid email</string>
    <string name="lbl_new_email">New email</string>
    <string name="lbl_type_ur_new_email">Type your new email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_type_ur_password">Type your password</string>
    <string name="str_please_enter_valid_otp">Enter valid otp</string>

    <string name="str_please_enter_valid_password">Enter valid password</string>
    <string name="lbl_current_password">Current Password</string>
    <string name="lbl_type_ur_current_password">Type your current password</string>
    <string name="lbl_new_password">New password</string>
    <string name="lbl_type_ur_new_password">Type your new password</string>
    <string name="lbl_confirm_password">Confirm password</string>
    <string name="lbl_type_ur_confirm_password">Confirm new password</string>
    <string name="str_confirm_password_not_match">Password not match</string>
    <string name="lbl_submit">Submit</string>
    <!--    Subject-->
    <string name="sujet">Sujet</string>
    <!--Write your question-->
    <string name="write_your_question">Write your question</string>
    <!--Type your subjet-->
    <string name="type_your_subject">Type your sujet</string>
    <!--Write your question here-->
    <string name="write_your_question_here">Write your question here</string>
    <!--Send-->
    <string name="send">Send</string>
    <!--Category-->
    <string name="category">Category</string>
    <!--Duration-->
    <string name="duration">Duration</string>
    <string name="percentage">Pourcentage du cours appris</string>
    <!--Start Course-->
    <string name="start_course">Start Course</string>
    <string name="about_this_course">About the course</string>
    <!--What you can learn from this course-->
    <string name="what_you_can_learn">What you can learn from this course</string>
    <!--Chapter-->
    <string name="chapters">Chapter %d</string>
    <!-- 2 Lessons-->
    <string name="lessons_count">%d Lessons</string>
    <string name="lesson_count">%d Lesson</string>
    <!--Rate this Course-->
    <string name="rate_this_course">Rate this Course</string>

    <!--Time spent: 0 minutes-->
    <string name="time_spent_in_min">Time spent: %dmin</string>
    <string name="time_spent_in_hr_min">Time spent: %dhr %dmin</string>

    <string name="vocabularies">Vocabulaire et grammaire</string>
    <string name="continue_course">Continue</string>


    <string name="lbl_civility">Civility</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_type_ur_lastname">Enter your last name</string>
    <string name="lbl_lastname">Last name</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_type_ur_username">Username</string>
    <string name="lbl_type_ur_email_address">Email address</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_profile">Profile</string>

    <string name="str_my_exercices">My Exercices</string>
    <string name="lbl_earn_badges">Earn badges</string>
    <string name="lbl_my_badges">My Badges</string>
    <string name="validation_input_email_invalid">"Email Id is invalid    "</string>
    <string name="email_updated_successfully">Email Id updated successfully!</string>

    <string name="no_data_found">No data found</string>
    <string name="time_spent">Time spent:</string>
    <string name="str_my_courses">My Courses</string>
    <string name="str_time_spent_value">Time spent: %s</string>
    <string name="str_progression">Progression :</string>
    <string-array name="civility_code">
        <item>Mr.</item>
        <item>Mrs.</item>
    </string-array>

    <string name="email_updated_successfully">Email Id updated successfully!</string>
    <string name="no_data_found">No data found</string>
    <string name="time_spent">Time spent:</string>

    <string name="avancement">AVANCEMENT GLOBAL</string>
    <string name="activities">ACTIVITÉS</string>
<string name="formations">Formations</string>
</resources>