<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dim16">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dim20"
        android:layout_marginStart="@dimen/dim20"
        android:background="@drawable/ic_rounded_corner_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dim20"
            android:fontFamily="@font/robotoregular"
            android:text="@string/success"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dim10"
            android:layout_marginTop="@dimen/dim20"
            android:layout_marginEnd="@dimen/dim10"
            android:fontFamily="@font/robotoregular"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dim_14sp"
            tools:text="@string/confirm_password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginTop="@dimen/dim20"
            android:background="@color/grey" />


        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dim15"
            android:layout_marginBottom="@dimen/dim15"
            android:fontFamily="@font/robotoregular"
            android:gravity="center"
            android:text="@string/confirmer"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="@dimen/dim_16sp" />
    </LinearLayout>


</LinearLayout>
