<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_order_note_promo_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D93869"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dim50"
        android:background="@drawable/bg_top_left_right_corner"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim40"
            android:layout_marginEnd="@dimen/dim40">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dim30"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:text="@string/write_a_message" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dim40"
                    app:srcCompat="@drawable/write_question_img" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dim45"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/sujet" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim10"
                    android:background="@drawable/bg_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="top"
                    android:hint="@string/type_your_subject"
                    android:padding="@dimen/dim16"
                    android:textColor="#8D8D8D"
                    android:textSize="@dimen/dim_14sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dim24"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/write_a_message" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_write_a_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim10"
                    android:background="@drawable/bg_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="top"
                    android:hint="@string/write_your_question_here"
                    android:lines="7"
                    android:padding="@dimen/dim16"
                    android:textColor="#8D8D8D"
                    android:textSize="@dimen/dim_14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim50"
                    android:background="@drawable/bg_light_green"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:id="@+id/btnSend"
                    android:enabled="false"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</LinearLayout>
